--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ heaer{
 
 .menu-incon span{
     height:3px;
-    background:white;
+    background:rgba(236, 59, 14, 0.671);
     margin:4px;
     border-radius:2px;
 }
