--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ heaer{
     align-items:center;
     justify-content:space-between;
     background-color:#333;
-    color:white;
+    color:rgba(230, 47, 47, 0.822);
     padding:10px20px;
 }
 
