--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ header{
     display;flex;
     align-items:center;
     justify-content:space-between;
-    background-color:#333;
-    color:rgba(230, 47, 47, 0.822);
+    background-color:#f7f2f2;
+    color:rgba(31, 29, 29, 0.822);
     padding:10px20px;
 }
 
