--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
     display;flex;
     align-items:center;
     justify-content:space-between;
-    background-color:#f7f2f2;
+    background-color:#da7777;
     color:rgba(31, 29, 29, 0.822);
     padding:10px20px;
 }
