--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-family:arial,sans-serif;
 }
 header{
-    display;flex;
+    display:flex;
     align-items:center;
     justify-content:space-between;
     background-color:#da7777;
@@ -21,7 +21,7 @@ header{
 }
 
 .menu-incon{
-    display;flex;
+    display:flex;
     flex-direction:column;
     width:30px;
     cursor:pointer;
