--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
     justify-content:space-between;
     background-color:#da7777;
     color:rgba(31, 29, 29, 0.822);
-    padding:20px30px;
+    padding: 20px 20px;px;
 }
 
 .logo{
