--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav{
 }
 nav a {
     color:white;
-    padding:15px20px;
+    padding: 20px;
     text-decoration:none;
     border-bottom:1px solid#555;
 }
