--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav a {
     color:white;
     padding: 20px;
     text-decoration:none;
-    border-bottom:1px solid#555;
+    border-bottom:1px solid#c42e2e;
 }
 
 nav a:hover{
